samples/_failures_safe/1761608211_ce3107_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_afb0bc9c.c: In function ‘main’:
./samples/SAFE/__tmp_afb0bc9c.c:136:5: error: expected expression at end of input
  136 |     if (!read_size_t("Enter cols for matrix A: ", &
      |     ^~
./samples/SAFE/__tmp_afb0bc9c.c:136:5: error: expected declaration or statement at end of input
